<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.saraqi.adventure.Intro">

    <ImageView
        android:id="@+id/intro_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/background"
        android:onClick="showText"/>

    <TextView
        android:id="@+id/intro_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/intro_title"
        android:fontFamily="serif"
        android:layout_marginTop="80dp"
        android:textSize="50sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/darker_gray" />


    <TextView
        android:id="@+id/intro_text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/intro_text1"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/intro_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="showText"/>

    <TextView
        android:id="@+id/intro_text2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/intro_text2"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/intro_text1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="showText"/>

    <TextView
        android:id="@+id/intro_text3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/intro_text3"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/intro_text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="showText"/>

    <TextView
        android:id="@+id/intro_text4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/intro_text4"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@+id/intro_text3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:onClick="showText"/>


</android.support.constraint.ConstraintLayout>
